--- a/src/Utmdev.DynamicSearch.csproj
+++ b/src/Utmdev.DynamicSearch.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="lib\" />
+    <Folder Include="lib\lib\" />
+  </ItemGroup>
 </Project>
